# rust_playground

actix_web_db/: Cargo.toml  README.md
actix_web_db/diesel_sample/: .gitignore  Cargo.toml  README.md
actix_web_db/diesel_sample/migrations/2024-09-22-045306_user/: up.sql
actix_web_db/diesel_sample/src/: db.rs  main.rs  model.rs  schema.rs
actix_web_db/sqlx_sample/: .gitignore  Cargo.toml  README.md
actix_web_db/sqlx_sample/migrations/: 20240831071916_user.up.sql
actix_web_db/sqlx_sample/src/: db.rs  main.rs
actix_web_db/src/: main.rs
gorules_example/src/: main.rs
json_operation/: Cargo.toml
json_operation/asset/: sample.json
json_operation/src/: main.rs
wasm/cl_rule_engine/: Cargo.toml  README.md  index.html
wasm/cl_rule_engine/src/: lib.rs
