[package]
name = "sqlx_sample"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging
env_logger = "0.11"
log = "0.4"
